[Fix] Help page button alignment & panel height.

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -1467,7 +1467,7 @@ input-password{
 	.button-bar{
 		margin-top: 30px;
 		border-top: 1px solid @shadow;
-		padding-top: 10px;
+		padding-top: 20px;
 
 		> *{
 			display: inline-block;
